Fixed article item overflow issue.

--- a/client/mnad-remix/app/styles/custom.css
+++ b/client/mnad-remix/app/styles/custom.css
@@ -7,7 +7,7 @@
 
 .one-line-text {
   display: -webkit-box;
-  -webkit-line-clamp: 2;
+  -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
